# bridge-robot

./: .gitignore  README.md  platformio.ini  test.py
bridge-robot/: flask_profiler.sql  old.py  pyproject.toml  test.py  test2.py
bridge-robot-backend/include/: config.h  ik.h  io.h  process.h
bridge-robot-backend/lib/pythonCommunication/: pythonCommunication.cpp  pythonCommunication.h
bridge-robot-backend/src/: main.cpp
bridge-robot/config/: config.py
bridge-robot/src/: detect_test.py  main.py  resolution_tester.py
bridge-robot/src/communication/: arduino.py
bridge-robot/src/static/scripts/: auction.js  trickCounter.js
bridge-robot/src/templates/: config.html  currently_playing.html  index.html  watch.html
bridge-robot/src/utils/: utils.py
bridge-robot/src/vision/: armcam.py  camera.py  maincam.py
logs/: debug_state.txt  debug_state_gcs.txt  gcs_server.out  raylet.out  runtime_env_agent.out  worker-07cf025b3b8029d5c166ce3b8e35f7fcc3a8e47c584f1ab2c28646af-01000000-23080.err  worker-07cf025b3b8029d5c166ce3b8e35f7fcc3a8e47c584f1ab2c28646af-01000000-23080.out  worker-3754e43803fb89662d70e9357439ae204802902eeb13526a52f9386b-01000000-23072.err  worker-5a1c5063d45bc8844660f12a5293534a88ef93bc704ab3d652ebbc05-01000000-9536.err  worker-5a1c5063d45bc8844660f12a5293534a88ef93bc704ab3d652ebbc05-01000000-9536.out
mass-rotate/: f.txt  main.py  sub.py
src/: main.py
