[tool.poetry]
name = "bridge-robot"
version = "0.1.0"
description = ""
authors = ["Alex Pylypenko <macaquedev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
opencv-python = "^4.9.0.80"
shapely = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
